Examples/y.output
Nonterminals useless in grammar

    funcion
    parametros_funcion
    resto_parametros_funcion
    parametro_funcion
    declaraciones_funcion


Terminals unused in grammar

    TOK_ERROR


Rules useless in grammar

   64 funcion: TOK_FUNCTION tipo identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

   65 parametros_funcion: parametro_funcion resto_parametros_funcion
   66                   | %empty

   67 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion parametros_funcion
   68                         | %empty

   69 parametro_funcion: tipo identificador

   70 declaraciones_funcion: declaraciones
   71                      | %empty


State 72 conflicts: 6 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    2 declaraciones: declaracion
    3              | declaracion declaraciones

    4 declaracion: clase identificadores TOK_PUNTOYCOMA

    5 clase: clase_escalar
    6      | clase_vector

    7 clase_escalar: tipo

    8 tipo: TOK_INT
    9     | TOK_BOOLEAN

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   11 identificadores: identificador
   12                | identificador TOK_COMA identificadores

   13 funciones: TOK_FUNCTION funciones
   14          | %empty

   15 sentencias: sentencia
   16           | sentencia sentencias

   17 sentencia: sentencia_simple TOK_PUNTOYCOMA
   18          | bloque

   19 sentencia_simple: asignacion
   20                 | lectura
   21                 | escritura
   22                 | retorno_funcion

   23 bloque: condicional
   24       | bucle

   25 asignacion: identificador TOK_ASIGNACION exp
   26           | elemento_vector TOK_ASIGNACION exp

   27 elemento_vector: identificador TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   28 condicional: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   29            | TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   30 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   31 lectura: TOK_SCANF identificador

   32 escritura: TOK_PRINTF exp

   33 retorno_funcion: TOK_RETURN exp

   34 exp: exp TOK_MAS exp
   35    | exp TOK_MENOS exp
   36    | exp TOK_DIVISION exp
   37    | exp TOK_ASTERISCO exp
   38    | TOK_MENOS exp
   39    | exp TOK_AND
   40    | exp TOK_OR exp
   41    | TOK_NOT exp
   42    | identificador
   43    | constante
   44    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   45    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   46    | elemento_vector
   47    | identificador TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   48 lista_expresiones: exp resto_lista_expresiones
   49                  | %empty

   50 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   51                        | %empty

   52 comparacion: exp TOK_IGUAL exp
   53            | exp TOK_DISTINTO exp
   54            | exp TOK_MENORIGUAL exp
   55            | exp TOK_MAYORIGUAL exp
   56            | exp TOK_MENOR exp
   57            | exp TOK_MAYOR exp

   58 constante: constante_logica
   59          | constante_entera

   60 constante_logica: TOK_TRUE
   61                 | TOK_FALSE

   62 constante_entera: TOK_CONSTANTE_ENTERA

   63 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_MAIN (258) 1
    TOK_INT (259) 8
    TOK_BOOLEAN (260) 9
    TOK_ARRAY (261) 10
    TOK_FUNCTION (262) 13
    TOK_IF (263) 28 29
    TOK_ELSE (264) 29
    TOK_WHILE (265) 30
    TOK_SCANF (266) 31
    TOK_PRINTF (267) 32
    TOK_RETURN (268) 33
    TOK_PUNTOYCOMA (269) 4 17
    TOK_COMA (270) 12 50
    TOK_PARENTESISIZQUIERDO (271) 28 29 30 44 45 47
    TOK_PARENTESISDERECHO (272) 28 29 30 44 45 47
    TOK_CORCHETEIZQUIERDO (273) 10 27
    TOK_CORCHETEDERECHO (274) 10 27
    TOK_LLAVEIZQUIERDA (275) 1 28 29 30
    TOK_LLAVEDERECHA (276) 1 28 29 30
    TOK_ASIGNACION (277) 25 26
    TOK_MAS (278) 34
    TOK_MENOS (279) 35 38
    TOK_DIVISION (280) 36
    TOK_ASTERISCO (281) 37
    TOK_AND (282) 39
    TOK_OR (283) 40
    TOK_NOT (284) 41
    TOK_IGUAL (285) 52
    TOK_DISTINTO (286) 53
    TOK_MENORIGUAL (287) 54
    TOK_MAYORIGUAL (288) 55
    TOK_MENOR (289) 56
    TOK_MAYOR (290) 57
    TOK_IDENTIFICADOR (291) 63
    TOK_CONSTANTE_ENTERA (292) 62
    TOK_TRUE (293) 60
    TOK_FALSE (294) 61
    TOK_ERROR (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    programa (42)
        on left: 1
        on right: 0
    declaraciones (43)
        on left: 2 3
        on right: 1 3
    declaracion (44)
        on left: 4
        on right: 2 3
    clase (45)
        on left: 5 6
        on right: 4
    clase_escalar (46)
        on left: 7
        on right: 5
    tipo (47)
        on left: 8 9
        on right: 7 10
    clase_vector (48)
        on left: 10
        on right: 6
    identificadores (49)
        on left: 11 12
        on right: 4 12
    funciones (50)
        on left: 13 14
        on right: 1 13
    sentencias (51)
        on left: 15 16
        on right: 1 16 28 29 30
    sentencia (52)
        on left: 17 18
        on right: 15 16
    sentencia_simple (53)
        on left: 19 20 21 22
        on right: 17
    bloque (54)
        on left: 23 24
        on right: 18
    asignacion (55)
        on left: 25 26
        on right: 19
    elemento_vector (56)
        on left: 27
        on right: 26 46
    condicional (57)
        on left: 28 29
        on right: 23
    bucle (58)
        on left: 30
        on right: 24
    lectura (59)
        on left: 31
        on right: 20
    escritura (60)
        on left: 32
        on right: 21
    retorno_funcion (61)
        on left: 33
        on right: 22
    exp (62)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 25 26 27 28 29 30 32 33 34 35 36 37 38 39 40 41 44 48 50 52 53 54 55 56 57
    lista_expresiones (63)
        on left: 48 49
        on right: 47
    resto_lista_expresiones (64)
        on left: 50 51
        on right: 48 50
    comparacion (65)
        on left: 52 53 54 55 56 57
        on right: 45
    constante (66)
        on left: 58 59
        on right: 43
    constante_logica (67)
        on left: 60 61
        on right: 58
    constante_entera (68)
        on left: 62
        on right: 10 59
    identificador (69)
        on left: 63
        on right: 11 12 25 27 31 42 47


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    declaraciones  go to state 8
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    8 tipo: TOK_INT .

    $default  reduce using rule 8 (tipo)


State 6

    9 tipo: TOK_BOOLEAN .

    $default  reduce using rule 9 (tipo)


State 7

   10 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    tipo  go to state 14


State 8

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 15

    $default  reduce using rule 14 (funciones)

    funciones  go to state 16


State 9

    2 declaraciones: declaracion .
    3              | declaracion . declaraciones

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 2 (declaraciones)

    declaraciones  go to state 17
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 10

    4 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 19
    identificador    go to state 20


State 11

    5 clase: clase_escalar .

    $default  reduce using rule 5 (clase)


State 12

    7 clase_escalar: tipo .

    $default  reduce using rule 7 (clase_escalar)


State 13

    6 clase: clase_vector .

    $default  reduce using rule 6 (clase)


State 14

   10 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 21


State 15

   13 funciones: TOK_FUNCTION . funciones

    TOK_FUNCTION  shift, and go to state 15

    $default  reduce using rule 14 (funciones)

    funciones  go to state 22


State 16

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 23
    TOK_WHILE          shift, and go to state 24
    TOK_SCANF          shift, and go to state 25
    TOK_PRINTF         shift, and go to state 26
    TOK_RETURN         shift, and go to state 27
    TOK_IDENTIFICADOR  shift, and go to state 18

    sentencias        go to state 28
    sentencia         go to state 29
    sentencia_simple  go to state 30
    bloque            go to state 31
    asignacion        go to state 32
    elemento_vector   go to state 33
    condicional       go to state 34
    bucle             go to state 35
    lectura           go to state 36
    escritura         go to state 37
    retorno_funcion   go to state 38
    identificador     go to state 39


State 17

    3 declaraciones: declaracion declaraciones .

    $default  reduce using rule 3 (declaraciones)


State 18

   63 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 63 (identificador)


State 19

    4 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 40


State 20

   11 identificadores: identificador .
   12                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 41

    $default  reduce using rule 11 (identificadores)


State 21

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 42

    constante_entera  go to state 43


State 22

   13 funciones: TOK_FUNCTION funciones .

    $default  reduce using rule 13 (funciones)


State 23

   28 condicional: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   29            | TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 44


State 24

   30 bucle: TOK_WHILE . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45


State 25

   31 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificador  go to state 46


State 26

   32 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 53
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 27

   33 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 58
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 28

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 59


State 29

   15 sentencias: sentencia .
   16           | sentencia . sentencias

    TOK_IF             shift, and go to state 23
    TOK_WHILE          shift, and go to state 24
    TOK_SCANF          shift, and go to state 25
    TOK_PRINTF         shift, and go to state 26
    TOK_RETURN         shift, and go to state 27
    TOK_IDENTIFICADOR  shift, and go to state 18

    $default  reduce using rule 15 (sentencias)

    sentencias        go to state 60
    sentencia         go to state 29
    sentencia_simple  go to state 30
    bloque            go to state 31
    asignacion        go to state 32
    elemento_vector   go to state 33
    condicional       go to state 34
    bucle             go to state 35
    lectura           go to state 36
    escritura         go to state 37
    retorno_funcion   go to state 38
    identificador     go to state 39


State 30

   17 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 61


State 31

   18 sentencia: bloque .

    $default  reduce using rule 18 (sentencia)


State 32

   19 sentencia_simple: asignacion .

    $default  reduce using rule 19 (sentencia_simple)


State 33

   26 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 62


State 34

   23 bloque: condicional .

    $default  reduce using rule 23 (bloque)


State 35

   24 bloque: bucle .

    $default  reduce using rule 24 (bloque)


State 36

   20 sentencia_simple: lectura .

    $default  reduce using rule 20 (sentencia_simple)


State 37

   21 sentencia_simple: escritura .

    $default  reduce using rule 21 (sentencia_simple)


State 38

   22 sentencia_simple: retorno_funcion .

    $default  reduce using rule 22 (sentencia_simple)


State 39

   25 asignacion: identificador . TOK_ASIGNACION exp
   27 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 63
    TOK_ASIGNACION         shift, and go to state 64


State 40

    4 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 4 (declaracion)


State 41

   12 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 65
    identificador    go to state 20


State 42

   62 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 62 (constante_entera)


State 43

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 66


State 44

   28 condicional: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   29            | TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 67
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 45

   30 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 68
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 46

   31 lectura: TOK_SCANF identificador .

    $default  reduce using rule 31 (lectura)


State 47

   44 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   45    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 69
    comparacion       go to state 70
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 48

   38 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 71
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 49

   41 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47
    TOK_MENOS                shift, and go to state 48
    TOK_NOT                  shift, and go to state 49
    TOK_IDENTIFICADOR        shift, and go to state 18
    TOK_CONSTANTE_ENTERA     shift, and go to state 42
    TOK_TRUE                 shift, and go to state 50
    TOK_FALSE                shift, and go to state 51

    elemento_vector   go to state 52
    exp               go to state 72
    constante         go to state 54
    constante_logica  go to state 55
    constante_entera  go to state 56
    identificador     go to state 57


State 50

   60 constante_logica: TOK_TRUE .

    $default  reduce using rule 60 (constante_logica)


State 51

   61 constante_logica: TOK_FALSE .

    $default  reduce using rule 61 (constante_logica)


State 52

   46 exp: elemento_vector .

    $default  reduce using rule 46 (exp)


State 53

   32 escritura: TOK_PRINTF exp .
   34 exp: exp . TOK_MAS exp
   35    | exp . TOK_MENOS exp
   36    | exp . TOK_DIVISION exp
   37    | exp . TOK_ASTERISCO exp
   39    | exp . TOK_AND
   40    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 73
    TOK_MENOS      shift, and go to state 74
    TOK_DIVISION   shift, and go to state 75
    TOK_ASTERISCO  shift, and go to state 76
    TOK_AND        shift, and go to state 77
    TOK_OR         shift, and go to state 78

    $default  reduce using rule 32 (escritura)


State 54

   43 exp: constante .

    $default  reduce using rule 43 (exp)


State 55

   58 constante: constante_logica .

    $default  reduce using rule 58 (constante)


State 56

   59 constante: constante_entera .
